# Snake-AI

./: .gitignore  LICENSE  README.md  brain.py  genetics.py  main.py  neurosnake.py  pyproject.toml  requirements.txt  test.py  visualization.py
